Computing degree pointer, modal alignment and back to top fix

--- a/frontend/src/components/Modal/Style.scss
+++ b/frontend/src/components/Modal/Style.scss
@@ -18,8 +18,8 @@
 
 @media (min-width: 600px) {
   .modal {
-    width: 650px;
-    left: calc(40% - 250px);
+    width: 700px;
+    left: calc(40% - 135px);
   }
 }
 
@@ -34,7 +34,7 @@
 
 @media (max-width: 650px) {
   .modal {
-    left: calc(43% - 250px); 
+    left: calc(43% - 250px);
   }
 }
 
