--- a/frontend/src/containers/Achievements/Style.scss
+++ b/frontend/src/containers/Achievements/Style.scss
@@ -6,4 +6,13 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  img:nth-child(2) {
+    cursor: pointer;
+  }
+}
+
+.degreeCard {
+  img {
+    cursor: pointer;
+  }
 }
