--- a/frontend/src/containers/Footer/Style.scss
+++ b/frontend/src/containers/Footer/Style.scss
@@ -24,7 +24,7 @@
   }
 
   .tooltip .tooltiptext::after {
-    @include tooltipArrowBottom
+    @include tooltipArrowBottom;
   }
 
   img {
@@ -36,7 +36,7 @@
     svg {
       padding: 0;
       position: inherit;
+      display: initial;
     }
   }
-
 }
