--- a/frontend/src/containers/Style.scss
+++ b/frontend/src/containers/Style.scss
@@ -7,7 +7,7 @@
   height: 100%;
   width: 100%;
   color: $colorPrimary;
-  background-image: url('../assets/Code-Background.png');
+  background-image: url("../assets/Code-Background.png");
   background-position: center;
 
   .AppHeader {
@@ -37,7 +37,7 @@
       }
     }
   }
-  
+
   h1 {
     @include headingOne;
   }
