--- a/frontend/src/styles/pallet.scss
+++ b/frontend/src/styles/pallet.scss
@@ -1,15 +1,14 @@
-$colorPrimary: 	          #D1E5FF;
-$colorSecondary:          #61dafb;
-$darkGrey:                #505050;
-$black:                   #131211;
-$transparentBlack:        rgba(0, 0, 0, 0.5);
-$evenMoreTransparentBlack:rgba(0, 0, 0, 0.9);
+$colorPrimary: #d1e5ff;
+$colorSecondary: #61dafb;
+$darkGrey: #505050;
+$black: #131211;
+$transparentBlack: rgba(0, 0, 0, 0.7);
+$evenMoreTransparentBlack: rgba(0, 0, 0, 0.9);
 
-
-$nav-active:              #0a0f48;
-$nav-standard:             $black;
-$footer-background:        $black;
-$mainBackgroundColor:     #36435c;
-$cardBackgroundColor:     #212838;
-$titleColour:             #faebd7;
-$modalBackground:         #00104c;
+$nav-active: #0a0f48;
+$nav-standard: $black;
+$footer-background: $black;
+$mainBackgroundColor: #36435c;
+$cardBackgroundColor: #212838;
+$titleColour: #faebd7;
+$modalBackground: #00104c;
